# example-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pre-commit.yml  tests.yml
src/tutorial/: __init__.py  tutorial_runner.py
tests/: test_tutorial_runner.py
