[metadata]
name = example-project
version = 0.0.1
description = simple training project for using mypy
author = Aleksander Wojnarowicz
author_email = alwojnarowicz@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    black>=22.0

[options.package_data]
tutorial = py.typed

[flake8]
max-line-length = 160
